--- a/UBCollecting/app/src/main/res/layout/activity_question_option.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_question_option.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.buffalo.cse.ubcollecting.LanguageActivity">
+    tools:context="edu.buffalo.cse.ubcollecting.QuestionOptionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,10 +15,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/language_id_label" />
+            android:text="@string/question_option_id_label" />
 
         <TextView
-            android:id="@+id/language_id_field"
+            android:id="@+id/question_option_id_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20px"
@@ -29,10 +28,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/language_name_label" />
+            android:text="@string/question_option_lang_id_label" />
 
         <EditText
-            android:id="@+id/language_name_field"
+            android:id="@+id/question_option_lang_id_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -40,42 +39,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/language_description_label" />
+            android:text="@string/question_option_text_label" />
 
         <EditText
-            android:id="@+id/language_description_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10px"
-            android:text="@string/language_other_names_label" />
-
-        <EditText
-            android:id="@+id/language_other_names_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10px"
-            android:text="@string/language_langtype_id_label" />
-
-        <EditText
-            android:id="@+id/language_langtype_id_field"
+            android:id="@+id/question_option_text_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/language_submit_button"
+            android:id="@+id/question_option_submit_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/submit_button_label" />
     </LinearLayout>
 
 </ScrollView>
-
 
