--- a/UBCollecting/app/src/main/res/layout/activity_session_answer.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_session_answer.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.buffalo.cse.ubcollecting.LanguageActivity">
+    tools:context="edu.buffalo.cse.ubcollecting.SessionAnswerActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,10 +15,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/language_id_label" />
+            android:text="@string/session_answer_id_label" />
 
         <TextView
-            android:id="@+id/language_id_field"
+            android:id="@+id/session_answer_id_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20px"
@@ -29,10 +28,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/language_name_label" />
+            android:text="@string/session_answer_questionnaire_id_label" />
 
         <EditText
-            android:id="@+id/language_name_field"
+            android:id="@+id/session_answer_questionnaire_id_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -40,10 +39,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/language_description_label" />
+            android:text="@string/session_answer_question_id_label" />
 
         <EditText
-            android:id="@+id/language_description_field"
+            android:id="@+id/session_answer_question_id_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -51,31 +50,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/language_other_names_label" />
+            android:text="@string/session_answer_answer_id_label" />
 
         <EditText
-            android:id="@+id/language_other_names_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10px"
-            android:text="@string/language_langtype_id_label" />
-
-        <EditText
-            android:id="@+id/language_langtype_id_field"
+            android:id="@+id/session_answer_answer_id_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/language_submit_button"
+            android:id="@+id/session_answer_submit_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/submit_button_label" />
     </LinearLayout>
 
 </ScrollView>
-
 
