--- a/UBCollecting/app/src/main/res/layout/activity_question_option.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_question_option.xml
@@ -15,25 +15,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/question_option_id_label" />
+            android:text="@string/question_option_lang_label" />
 
         <TextView
-            android:id="@+id/question_option_id_field"
+            android:id="@+id/question_option_lang_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20px"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10px"
-            android:text="@string/question_option_lang_id_label" />
-
-        <EditText
-            android:id="@+id/question_option_lang_id_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:textSize="16pt"/>
 
         <TextView
             android:layout_width="match_parent"
