--- a/UBCollecting/app/src/main/res/values/strings_language.xml
+++ b/UBCollecting/app/src/main/res/values/strings_language.xml
@@ -4,5 +4,5 @@
     <string name="language_name_label">Language Name</string>
     <string name="language_description_label">Language Description</string>
     <string name="language_other_names_label">Other Names</string>
-    <string name="language_langtype_id_label">Type ID</string>
+    <string name="language_langtype_label">Type</string>
 </resources>
