--- a/UBCollecting/app/src/main/res/layout/activity_answer.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_answer.xml
@@ -15,36 +15,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/answer_id_label" />
+            android:text="@string/answer_questionnaire_name_label" />
 
         <TextView
-            android:id="@+id/answer_id_field"
+            android:id="@+id/answer_questionnaire_name_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20px"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10px"
-            android:text="@string/answer_questionnaire_id_label" />
-
-        <EditText
-            android:id="@+id/answer_questionnaire_id_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:textSize="16pt" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/answer_question_id_label" />
+            android:text="@string/answer_question_name_label" />
 
-        <EditText
-            android:id="@+id/answer_question_id_field"
+        <TextView
+            android:id="@+id/answer_question_name_field"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="16pt" />
 
         <TextView
             android:layout_width="match_parent"
