--- a/UBCollecting/app/src/main/res/layout/activity_session_answer.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_session_answer.xml
@@ -15,47 +15,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/session_answer_id_label" />
+            android:text="@string/session_answer_questionnaire_label" />
 
         <TextView
-            android:id="@+id/session_answer_id_field"
+            android:id="@+id/session_answer_questionnaire_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20px"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10px"
-            android:text="@string/session_answer_questionnaire_id_label" />
-
-        <EditText
-            android:id="@+id/session_answer_questionnaire_id_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:textSize="16pt"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/session_answer_question_id_label" />
+            android:text="@string/session_answer_question_label" />
 
-        <EditText
-            android:id="@+id/session_answer_question_id_field"
+        <TextView
+            android:id="@+id/session_answer_question_field"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="16pt"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/session_answer_answer_id_label" />
+            android:text="@string/session_answer_answer_label" />
 
-        <EditText
-            android:id="@+id/session_answer_answer_id_field"
+        <TextView
+            android:id="@+id/session_answer_answer_field"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="16pt"/>
 
         <Button
             android:id="@+id/session_answer_submit_button"
