--- a/UBCollecting/app/src/main/res/values/strings_file.xml
+++ b/UBCollecting/app/src/main/res/values/strings_file.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="file_id_label">File ID</string>
     <string name="file_name_label">File Name</string>
-    <string name="file_answer_id_label">File Answer ID</string>
+    <string name="file_answer_label">File Answer</string>
     <string name="file_type_label">File Type</string>
     <string name="file_path_label">File Path</string>
     <string name="file_creator_label">File Creator</string>
