--- a/UBCollecting/app/src/main/res/values/strings_person.xml
+++ b/UBCollecting/app/src/main/res/values/strings_person.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">UB Collecting</string>
-    <string name="person_id_label">Person ID</string>
     <string name="person_name_label">Full Name</string>
-    <string name="person_preferred_name_label">Preferred Name</string>
+    <string name="person_preferred_name_label">Other Name(s)</string>
     <string name="person_dob_label">Date of Birth</string>
     <string name="person_role_label">Role</string>
     <string name="person_photo_label">Photo</string>
