--- a/UBCollecting/app/src/main/res/values/strings_question_option.xml
+++ b/UBCollecting/app/src/main/res/values/strings_question_option.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="question_option_id_label">ID</string>
-    <string name="question_option_lang_id_label">Language ID</string>
+    <string name="question_option_lang_label">Language</string>
     <string name="question_option_text_label">Question Option Text</string>
 </resources>
