--- a/UBCollecting/app/src/main/res/values/strings_session_answer.xml
+++ b/UBCollecting/app/src/main/res/values/strings_session_answer.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="session_answer_id_label">ID</string>
-    <string name="session_answer_questionnaire_id_label">Questionnaire ID</string>
-    <string name="session_answer_question_id_label">Question ID</string>
-    <string name="session_answer_answer_id_label">Answer ID</string>
+    <string name="session_answer_questionnaire_label">Questionnaire</string>
+    <string name="session_answer_question_label">Question</string>
+    <string name="session_answer_answer_label">Answer</string>
 </resources>
