--- a/UBCollecting/app/src/main/res/values/strings_list_item.xml
+++ b/UBCollecting/app/src/main/res/values/strings_list_item.xml
@@ -2,5 +2,6 @@
 <resources>
     <string name="insert_button">Insert</string>
     <string name="view_button">View</string>
+    <string name="edit_button">Edit</string>
     <string name="delete_button">Delete</string>
 </resources>
