Implemented Recycler view for table view

--- a/UBCollecting/app/src/main/res/layout/table_list_item_view.xml
+++ b/UBCollecting/app/src/main/res/layout/table_list_item_view.xml
@@ -11,31 +11,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@id/table_item_insert_button"
-        android:textStyle="bold"
-        android:textSize="12pt"
-        android:padding="4dp" />
+        android:padding="5dp"
+        android:textSize="10pt"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/table_item_insert_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:text="@string/insert_button" />
+        android:src="@drawable/ic_add_black_24dp" />
 
-    <Button
+    <ImageButton
         android:id="@+id/table_item_view_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@id/table_item_insert_button"
-        android:text="@string/view_button" />
+        android:src="@drawable/ic_view_black_24dp" />
 
-    <Button
+    <ImageButton
         android:id="@+id/table_item_delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@id/table_item_view_button"
-        android:text="@string/delete_button" />
+        android:src="@drawable/ic_delete_black_24dp" />
 
 </RelativeLayout>
