--- a/UBCollecting/app/src/main/res/layout/entry_list_item_view.xml
+++ b/UBCollecting/app/src/main/res/layout/entry_list_item_view.xml
@@ -7,20 +7,22 @@
         android:id="@+id/entry_list_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/entry_list_edit_button"/>
+        android:layout_toLeftOf="@+id/entry_list_edit_button"
+        android:padding="5dp"
+        android:textSize="10pt"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/entry_list_edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/entry_list_delete_button"
-        android:text="@string/edit_button"/>
+        android:src="@drawable/ic_edit_black_24dp"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/entry_list_delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/delete_button"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_delete_black_24dp" />
 
 </RelativeLayout>
