--- a/UBCollecting/app/src/main/res/layout/table_list_item_view.xml
+++ b/UBCollecting/app/src/main/res/layout/table_list_item_view.xml
@@ -19,6 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="2dp"
         android:src="@drawable/ic_add_black_24dp" />
 
     <ImageButton
@@ -27,14 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@id/table_item_insert_button"
+        android:layout_marginRight="2dp"
+        android:layout_marginBottom="2dp"
         android:src="@drawable/ic_view_black_24dp" />
-
-    <ImageButton
-        android:id="@+id/table_item_delete_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/table_item_view_button"
-        android:src="@drawable/ic_delete_black_24dp" />
 
 </RelativeLayout>
