--- a/UBCollecting/app/src/main/res/values/colors.xml
+++ b/UBCollecting/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#005bbb</color>
+    <color name="colorPrimaryDark">#002f56</color>
+    <color name="colorAccent">#e56a54</color>
 </resources>
