Implementing update of entries in UI

--- a/UBCollecting/app/src/main/res/layout/activity_role.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_role.xml
@@ -74,6 +74,13 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/role_update_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="@string/update_button_label" />
+
+        <Button
             android:id="@+id/role_submit_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
