--- a/UBCollecting/app/src/main/res/layout/activity_person.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_person.xml
@@ -90,6 +90,13 @@
             android:layout_height="wrap_content" />
 
         <Button
+            android:id="@+id/person_update_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="@string/update_button_label" />
+
+        <Button
             android:id="@+id/person_submit_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
