--- a/UBCollecting/app/src/main/res/layout/activity_person.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_person.xml
@@ -62,10 +62,21 @@
             android:layout_margin="10px"
             android:text="@string/person_photo_label" />
 
-        <EditText
-            android:id="@+id/person_photo_field"
+        <!--<EditText-->
+            <!--android:id="@+id/person_photo_field"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <ImageView
+            android:id="@+id/person_photo_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/person_photo_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Take Photo" />
 
         <TextView
             android:layout_width="match_parent"
