--- a/UBCollecting/app/src/main/res/layout/activity_questionnaire.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_questionnaire.xml
@@ -50,10 +50,17 @@
             android:layout_margin="10px"
             android:text="@string/questionnaire_type_label" />
 
-        <EditText
-            android:id="@+id/questionnaire_type_field"
+        <Spinner
+            android:id="@+id/questionnaire_type_spinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:spinnerMode="dropdown"/>
+
+        <Button
+            android:id="@+id/questionnaire_update_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/update_button_label" />
 
         <Button
             android:id="@+id/questionnaire_submit_button"
