--- a/UBCollecting/app/src/main/res/layout/activity_questionnaire_type.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_questionnaire_type.xml
@@ -23,6 +23,12 @@
             android:layout_height="wrap_content" />
 
         <Button
+            android:id="@+id/questionnaire_type_update_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/update_button_label" />
+
+        <Button
             android:id="@+id/questionnaire_type_submit_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
