--- a/UBCollecting/app/src/main/res/drawable/border.xml
+++ b/UBCollecting/app/src/main/res/drawable/border.xml
@@ -5,7 +5,10 @@
             <solid android:color="#222222" />
         </shape>
     </item>
-    <item android:left="2dp" android:right="2dp"  android:bottom="2dp" >
+    <item
+        android:bottom="2dp"
+        android:left="2dp"
+        android:right="2dp">
         <shape android:shape="rectangle">
             <solid android:color="#FFFFFF" />
         </shape>
