--- a/UBCollecting/app/src/main/res/layout/activity_person.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_person.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -54,7 +53,7 @@
             android:id="@+id/person_role_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:spinnerMode="dropdown"/>
+            android:spinnerMode="dropdown" />
 
         <TextView
             android:layout_width="match_parent"
@@ -99,8 +98,8 @@
             android:id="@+id/person_update_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="@string/update_button_label" />
+            android:text="@string/update_button_label"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/person_submit_button"
