--- a/UBCollecting/app/src/main/res/layout/activity_role.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_role.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,7 +35,7 @@
                 android:id="@+id/role_intro_required_box"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layoutDirection="rtl"/>
+                android:layoutDirection="rtl" />
         </LinearLayout>
 
         <LinearLayout
@@ -53,7 +52,7 @@
                 android:id="@+id/role_photo_required_box"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layoutDirection="rtl"/>
+                android:layoutDirection="rtl" />
         </LinearLayout>
 
         <LinearLayout
@@ -70,15 +69,15 @@
                 android:id="@+id/role_on_client_box"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layoutDirection="rtl"/>
+                android:layoutDirection="rtl" />
         </LinearLayout>
 
         <Button
             android:id="@+id/role_update_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="@string/update_button_label" />
+            android:text="@string/update_button_label"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/role_submit_button"
