--- a/UBCollecting/app/src/main/res/layout/entry_list_item_view.xml
+++ b/UBCollecting/app/src/main/res/layout/entry_list_item_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
@@ -9,14 +9,14 @@
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/entry_list_edit_button"
         android:padding="5dp"
-        android:textSize="10pt"/>
+        android:textSize="10pt" />
 
     <ImageButton
         android:id="@+id/entry_list_edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/entry_list_delete_button"
-        android:src="@drawable/ic_edit_black_24dp"/>
+        android:src="@drawable/ic_edit_black_24dp" />
 
     <ImageButton
         android:id="@+id/entry_list_delete_button"
