--- a/UBCollecting/app/src/main/res/values/strings_questionnaire.xml
+++ b/UBCollecting/app/src/main/res/values/strings_questionnaire.xml
@@ -4,4 +4,5 @@
     <string name="questionnaire_name_label">Questionnaire Name</string>
     <string name="questionnaire_description_label">Questionnaire Description</string>
     <string name="questionnaire_type_label">Questionnaire Type</string>
+    <string name="questionnaire_add_questions">Add Questions</string>
 </resources>
