--- a/UBCollecting/app/src/main/res/layout/activity_person.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_person.xml
@@ -95,27 +95,33 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/person_email_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/person_email_label" />
+            android:text="@string/person_email_label"
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/person_email_field"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
         <TextView
+            android:id="@+id/person_password_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/person_password_label" />
+            android:text="@string/person_password_label"
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/person_password_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/person_update_button"
