Have create activity working and fully functional

--- a/UBCollecting/app/src/main/res/layout/entry_list_item_select.xml
+++ b/UBCollecting/app/src/main/res/layout/entry_list_item_select.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:id="@+id/entry_list_outer_linear_layout"
+    android:paddingBottom="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/entry_list_inner_linear_layout">
 
         <CheckBox
             android:id="@+id/entry_list_select_box"
@@ -25,4 +29,5 @@
     </LinearLayout>
 
 
-</RelativeLayout>
+
+</LinearLayout>
