--- a/UBCollecting/app/src/main/res/drawable/border.xml
+++ b/UBCollecting/app/src/main/res/drawable/border.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#222222" />
+            <solid android:color="@android:color/background_light" />
         </shape>
     </item>
     <item
