--- a/UBCollecting/app/src/main/res/layout/activity_table_select.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_table_select.xml
@@ -5,6 +5,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="edu.buffalo.cse.ubcollecting.ui.AddQuestionsActivity">
+    <LinearLayout
+        android:id="@+id/table_select_filter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/languages"/>
+
+        <ListView
+            android:id="@+id/table_select_filter_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,23 +27,30 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/entry_list_select_search_view"
+            android:id="@+id/table_select_search_view"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
 
         <ImageButton
-            android:id="@+id/entry_list_select_search_button"
+            android:id="@+id/table_select_clear_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_clear_black_24dp"
+            android:background="@android:color/background_light"
+            android:visibility="gone"/>
+
+        <ImageButton
+            android:id="@+id/table_select_search_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_search_black_24dp"/>
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/add_questions_recycler"
+        android:id="@+id/table_select_recycler"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +58,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/add_question_submit_button"
+            android:id="@+id/table_select_done_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/done_button_label" />
