--- a/UBCollecting/app/src/main/res/layout/activity_create_questions.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_create_questions.xml
@@ -12,6 +12,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/select_question_properties"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:layout_width="match_parent"
@@ -25,6 +26,7 @@
         />
 
     <TextView
+        android:id="@+id/select_question_languages"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:layout_width="match_parent"
