--- a/UBCollecting/app/src/main/res/layout/activity_table_select.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_table_select.xml
@@ -50,11 +50,12 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/table_select_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0px"
+        android:layout_weight="1"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <Button
