Finished QuestionnaireActivity and deleted stubbed classes

--- a/UBCollecting/app/src/main/res/layout/activity_questionnaire.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_questionnaire.xml
@@ -59,12 +59,12 @@
             android:id="@+id/questionnaire_add_questions_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/questionnaire_add_questions"/>
+            android:text="@string/questionnaire_add_questions" />
 
         <ListView
             android:id="@+id/questionnaire_question_list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="266dp" />
 
         <Button
             android:id="@+id/questionnaire_update_button"
